fix: scrollbar

--- a/src/pages/Expenses/Expenses.module.scss
+++ b/src/pages/Expenses/Expenses.module.scss
@@ -1,5 +1,12 @@
 @import '../../Global/variables.scss';
 
+body{
+    &::-webkit-scrollbar{
+        display: none;
+        width: 0;
+    }
+}
+
 .pix {
     border: 1px solid $lightYellow;
 
